<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/coms"
        android:id="@+id/help1"
        android:layout_below="@+id/imageView30"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/v"
        android:id="@+id/help2"
        android:layout_below="@+id/help1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/a"
        android:onClick="DialIt"
        android:id="@+id/help3"
        android:layout_alignTop="@+id/help2"
        android:layout_centerHorizontal="true"
        android:textColor="#0000ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:onClick="DialIt"
        android:text="@string/r"
        android:id="@+id/help4"
        android:layout_below="@+id/help3"
        android:layout_alignLeft="@+id/help3"
        android:layout_alignStart="@+id/help3"
        android:textColor="#0000ff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView30"
        android:layout_alignParentTop="true"
        android:onClick="BackOthers"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@android:drawable/ic_delete" />
</RelativeLayout>